@startuml

title Modelo relacional: origen ESCALL y destino local

left to right direction
hide methods

package "ORIGEN ESCALL\nescarperu_software" {

    entity "gestiones" as gestiones_origen {
        * id : BIGINT
        --
        fecha_gestion : DATETIME
        dni : VARCHAR
        telefono : VARCHAR
        status : VARCHAR
        tipificacion : VARCHAR
        fecha_pago : DATE
        monto_pago : DECIMAL
        nombre : VARCHAR
    }

    entity "sp_descargar_gestiones_rango" as sp <<procedure>> {
        fecha_desde : DATETIME
        fecha_hasta : DATETIME
        --
        resultado : GESTIONES
    }

    gestiones_origen --> sp : consulta por rango
}

package "DESTINO LOCAL\nautomatizacion_gestiones" {

    entity "empresas" as empresas {
        * id_empresa : BIGINT
    }

    entity "usuarios" as usuarios {
        * id_usuario : BIGINT
        --
        id_empresa : BIGINT
    }

    entity "carteras" as carteras {
        * id_cartera : BIGINT
        --
        id_empresa : BIGINT
    }

    entity "control_descargas_gestiones" as controles {
        * id_control : BIGINT
        --
        fecha_desde : DATETIME
        fecha_hasta : DATETIME
        estado : ENUM
        registros_origen : INT
        registros_insertados : INT
    }

    entity "cargas_gestiones" as cargas {
        * id_carga : BIGINT
        --
        id_control_descarga : BIGINT
    }

    entity "gestiones_procesadas" as procesadas {
        * id_procesado : BIGINT
        --
        id_gestion_origen : BIGINT
        fecha_gestion : DATETIME
        dni : VARCHAR
        status_homologado : VARCHAR
        tipificacion_homologada : VARCHAR
        clave_unica : CHAR(64)
        id_control_descarga : BIGINT
    }

    entity "reportes" as reportes {
        * id_reporte : BIGINT
    }

    entity "destinatarios_reportes" as destinatarios {
        * id_destinatario : BIGINT
    }

    entity "envios_reportes" as envios {
        * id_envio : BIGINT
        --
        id_reporte : BIGINT
        id_destinatario : BIGINT
    }

    entity "logs_proceso" as logs {
        * id_log : BIGINT
        --
        id_control_descarga : BIGINT
    }

    empresas ||--o{ usuarios : tiene
    empresas ||--o{ carteras : administra

    controles ||--o{ cargas : genera
    controles ||--o{ procesadas : contiene
    controles ||--o{ logs : registra

    reportes ||--o{ envios : genera
    destinatarios ||--o{ envios : recibe
}

sp ..> procesadas : Python descarga,\nhomologa y almacena

note on link
No existe escritura directa
ni clave foránea entre servidores.
end note

@enduml